ProjectBoard/salesforce/force-app/main/default/objects/Project_Task__c/fields/Assignee__c.field-meta.xml
<CustomField>
    <fullName>Assignee__c</fullName>
    <label>Assignee</label>
    <type>Text</type>
    <length>120</length>
</CustomField>